Nouveau: Fix color contrast for Manage Group Members list.
Fixes #7756.

git-svn-id: https://buddypress.svn.wordpress.org/trunk@11980 cdf35c40-ae34-48e0-9cc9-0c9da1808c22

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_buttons.scss
@@ -169,7 +169,7 @@
 				background: none;
 				border: none;
 				border-right: 1px solid $bp-border-color;
-				color: $light-text;
+				color: $light-text-plus;
 				display: inline-block;
 				padding: $pad-xsml $pad-med;
 
