--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -4001,7 +4001,7 @@ body.no-js .buddypress #messages-bulk-management #select-all-messages {
 	background: none;
 	border: none;
 	border-left: 1px solid #eee;
-	color: #767676;
+	color: #737373;
 	display: inline-block;
 	padding: 0.3em 1em;
 }
